Fixed header alignment

--- a/css/main.css
+++ b/css/main.css
@@ -46,4 +46,5 @@ li:first-child{
 
 div.sub{
   width: 60%;
+  margin: auto;
 }
